--- a/tasks/psm_postinstall.yml
+++ b/tasks/psm_postinstall.yml
@@ -29,6 +29,7 @@
         flat: yes
       with_items:
         - "{{ log_result.stdout | from_json }}"
+      when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length > 0"
 
     - name: Enable AutoAdminLogon
       win_regedit:
@@ -107,22 +108,31 @@
 
   rescue:
 
-    - name: Get log path for post installation
-      win_shell: |
-        $Result = Get-Content "{{ psm_postinstall_log }}"
-        Write-Output $Result
-      register: log_result
+    - name: Rescue - Try to fetch remote logs onto the host
+      block:
+        - name: Get log path for post installation
+          win_shell: |
+            $Result = Get-Content "{{ psm_postinstall_log }}"
+            Write-Output $Result
+          register: log_result
 
-    - name: Fetch postinstall log from path
-      fetch:
-        src: '{{ item.logPath }}'
-        dest: '{{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_postinstall.log'
-        flat: yes
-      with_items:
-        - "{{ log_result.stdout | from_json }}"
+        - name: Fetch postinstall log from path
+          fetch:
+            src: '{{ item.logPath }}'
+            dest: '{{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_postinstall.log'
+            flat: yes
+          with_items:
+            - "{{ log_result.stdout | from_json }}"
 
-    - fail:
-        msg: 'ERROR: Post Installation failed. For more info check {{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_postinstall.log'
+        - name: Rescue - Fail postinstall stage
+          fail:
+            msg: 'ERROR: Post Installation failed. For more info check {{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_postinstall.log'
+      when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length > 0"
+
+    - name: Rescue - Fail postinstall stage
+      fail:
+        msg: 'ERROR: Post Installation failed. For more info check the logs on the remote machine.'
+      when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length == 0"
 
 - name: validate users exists and password expiration
   win_shell: |
