--- a/tasks/psm_prerequisites.yml
+++ b/tasks/psm_prerequisites.yml
@@ -141,6 +141,7 @@
         flat: yes
       with_items:
         - "{{ log_result.stdout | from_json }}"
+      when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length > 0"
 
     - name: Enable AutoAdminLogon
       win_regedit:
@@ -219,19 +220,28 @@
 
   rescue:
 
-    - name: Get log path for preinstall
-      win_shell: |
-        $Result = Get-Content "{{ psm_prerequisites_log }}"
-        Write-Output $Result
-      register: log_result
+    - name: Rescue - Try to fetch remote logs onto the host
+      block:
+        - name: Get log path for preinstall
+          win_shell: |
+            $Result = Get-Content "{{ psm_prerequisites_log }}"
+            Write-Output $Result
+          register: log_result
 
-    - name: Fetch prerequisites log from path
-      fetch:
-        src: '{{ item.logPath }}'
-        dest: '{{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_prerequisites.log'
-        flat: yes
-      with_items:
-        - "{{ log_result.stdout | from_json }}"
+        - name: Fetch prerequisites log from path
+          fetch:
+            src: '{{ item.logPath }}'
+            dest: '{{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_prerequisites.log'
+            flat: yes
+          with_items:
+            - "{{ log_result.stdout | from_json }}"
 
-    - fail:
-        msg: 'ERROR: Preinstall failed. For more info check {{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_preinstall.log'
+        - name: Rescue - Fail prerequisites stage
+          fail:
+            msg: 'ERROR: Pre Prerequisites failed. For more info check {{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_preinstall.log'
+      when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length > 0"
+
+    - name: Rescue - Fail prerequisites stage
+      fail:
+        msg: 'ERROR: Pre Prerequisites failed. For more info check the logs on the remote machine.'
+      when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length == 0"
