--- a/tasks/psm_registration.yml
+++ b/tasks/psm_registration.yml
@@ -80,6 +80,7 @@
         flat: yes
       with_items:
         - "{{ log_result.stdout | from_json }}"
+      when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length > 0"
 
     - name: Start PSM service & set to auto
       win_service:
@@ -98,20 +99,29 @@
 
   rescue:
 
-    - name: Get log path for registration
-      win_shell: |
-        $Result = Get-Content "{{ psm_registration_log }}"
-        Write-Output $Result
-      register: log_result
-      no_log: true
+    - name: Rescue - Try to fetch remote logs onto the host
+      block:
+        - name: Get log path for registration
+          win_shell: |
+            $Result = Get-Content "{{ psm_registration_log }}"
+            Write-Output $Result
+          register: log_result
+          no_log: true
 
-    - name: Fetch registration log from path
-      fetch:
-        src: '{{ item.logPath }}'
-        dest: '{{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_registration.log'
-        flat: yes
-      with_items:
-        - "{{ log_result.stdout | from_json }}"
+        - name: Fetch registration log from path
+          fetch:
+            src: '{{ item.logPath }}'
+            dest: '{{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_registration.log'
+            flat: yes
+          with_items:
+            - "{{ log_result.stdout | from_json }}"
 
-    - fail:
-        msg: 'ERROR: Registration failed. For more info check {{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_registration.log'
+        - name: Rescue - Fail registration stage
+          fail:
+            msg: 'ERROR: Registration failed. For more info check {{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_registration.log'
+      when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length > 0"
+
+    - name: Rescue - Fail registration stage
+      fail:
+        msg: 'ERROR: Registration failed. For more info check the logs on the remote machine.'
+      when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length == 0"
