--- a/tasks/psm_prerequisites.yml
+++ b/tasks/psm_prerequisites.yml
@@ -220,25 +220,25 @@
 
   rescue:
 
-    - name: Rescue - Try to fetch remote logs onto the host
-      block:
-        - name: Get log path for preinstall
-          win_shell: |
-            $Result = Get-Content "{{ psm_prerequisites_log }}"
-            Write-Output $Result
-          register: log_result
+    - name: Rescue - Get log path for preinstall
+      win_shell: |
+        $Result = Get-Content "{{ psm_prerequisites_log }}"
+        Write-Output $Result
+      register: log_result
+      when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length > 0"
 
-        - name: Fetch prerequisites log from path
-          fetch:
-            src: '{{ item.logPath }}'
-            dest: '{{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_prerequisites.log'
-            flat: yes
-          with_items:
-            - "{{ log_result.stdout | from_json }}"
+    - name: Rescue - Fetch prerequisites log from path
+      fetch:
+        src: '{{ item.logPath }}'
+        dest: '{{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_prerequisites.log'
+        flat: yes
+      with_items:
+        - "{{ log_result.stdout | from_json }}"
+      when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length > 0"
 
-        - name: Rescue - Fail prerequisites stage
-          fail:
-            msg: 'ERROR: Pre Prerequisites failed. For more info check {{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_preinstall.log'
+    - name: Rescue - Fail prerequisites stage
+      fail:
+        msg: 'ERROR: Pre Prerequisites failed. For more info check {{ lookup("config", "DEFAULT_LOG_PATH") | dirname }}/psm/{{ inventory_hostname }}_preinstall.log'
       when : "lookup('config', 'DEFAULT_LOG_PATH') | default('', true) | length > 0"
 
     - name: Rescue - Fail prerequisites stage
