fix: added the PSM folder name in the variable

--- a/tasks/psm_install.yml
+++ b/tasks/psm_install.yml
@@ -161,4 +161,4 @@
 
 - set_fact:
     psm_exists: "{{ psm_service_info.exists }}"
-    fact_psm_installation_path: "{{ psm_installation_path }}"
+    fact_psm_installation_path: "{{ psm_installation_path }}\\PSM"
